adds validation for required accessor in annotation processor